--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "admin-lte": "^3.1.0",
     "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
+    "bulmaswatch": "^0.8.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
