Fix: 本番環境のDB設定を開発環境で回避するためにオーバーライドを記述

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,11 @@ default: &default
 development:
   <<: *default
   database: desktour_development
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: root
+  password: root
+  host: 127.0.0.1
+  port: 3357
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
