--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ default: &default
 
 development:
   <<: *default
-  database: desktour_development
+  database: buildesk_development
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password: root
@@ -34,7 +34,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: desktour_test
+  database: buildesk_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
