--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+# Ignore template files
+/public/404.html
+/public/422.html
+/public/500.html
