Fix: 本番環境のMYSQLパスワードをcredentialsからの読み込みに修正
本番環境のMYSQLにパスワードが必要なため

--- a/config/database.yml
+++ b/config/database.yml
@@ -57,4 +57,5 @@ test:
 #
 production:
   <<: *default
-  database: aws_buildesk_production
+  database: buildesk_production
+  password: Rails.application.credentials.dig(:vps, :mysql_password)
