--- a/config/database.yml
+++ b/config/database.yml
@@ -58,4 +58,5 @@ test:
 production:
   <<: *default
   database: buildesk_production
+  username: root
   password: Rails.application.credentials.dig(:vps, :mysql_password)
