Fix: 環境変数の指定場所を変更
mysqlの接続でエラーになるため、credentialsではなく/etc/environmentに記述

--- a/config/database.yml
+++ b/config/database.yml
@@ -56,4 +56,4 @@ production:
   <<: *default
   database: buildesk_production
   username: root
-  password: Rails.application.credentials.dig(:vps, :mysql_password)
+  password: <%= ENV['DATABASE_PASSWORD'] %>
